@@ -51,4 +51,10 @@ def term_width(new_width=None):
         width = cur
     return width
 
+def is_local(url):
+    if "://" in url:
+        scheme,path = url.split("://",maxsplit=1)
+        return scheme in ["file","mail","list","mailto"]
+    else:
+        return True
 
